--- a/index.html
+++ b/index.html
@@ -1,122 +1,96 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Геннадий Калиман - Kaliman Books</title>
+  <meta charset="UTF-8">
+  <title>Геннадий Калиман - Книга</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 2em;
-      background: #f8f9fa;
-      color: #333;
+      max-width: 1100px; /* Wider text area */
+      margin: 10px auto; /* Smaller outer margin */
+      padding: 10px;     /* Smaller inner padding */
       line-height: 1.5;
     }
+
     h1 {
       text-align: center;
-      color: #2c3e50;
-      margin-bottom: 1em;
+      margin-bottom: 20px;
     }
-    .profile {
+
+    .container {
       display: flex;
-      gap: 1.5em;
+      flex-wrap: wrap;
+      gap: 15px;
       align-items: flex-start;
-      margin-bottom: 2em;
     }
-    .profile img {
-      max-width: 180px;
-      height: auto;
+
+    .photo {
+      flex: 0 0 220px;
+    }
+
+    .photo img {
+      width: 100%;
       border-radius: 10px;
-      box-shadow: 0 0 8px rgba(0,0,0,0.1);
-      flex-shrink: 0;
     }
-    .bio-text {
-      font-size: 1rem;
-      white-space: pre-wrap;
+
+    .bio {
+      flex: 1;
     }
+
     .button {
       display: inline-block;
-      padding: 0.7em 1.5em;
-      background-color: #3498db;
+      background-color: #007bff;
       color: white;
+      padding: 10px 16px;
       text-decoration: none;
-      border-radius: 6px;
-      margin: 1em 0 2em 0;
+      border-radius: 5px;
+      margin-top: 20px;
+      font-size: 15px;
     }
+
     .button:hover {
-      background-color: #2980b9;
+      background-color: #0056b3;
     }
-    hr {
-      border: none;
-      border-top: 1px solid #ddd;
-      margin: 2em 0;
-    }
-    h2 {
-      color: #2c3e50;
-      margin-bottom: 1em;
+
+    .comments {
+      margin-top: 40px;
     }
   </style>
 </head>
 <body>
+  <h1>Геннадий Калиман</h1>
 
-  <h1>Геннадий Калиман (Gene Kaliman)</h1>
+  <div class="container">
+    <div class="photo">
+      <img src="GeneKaliman.jpg" alt="Геннадий Калиман">
+    </div>
 
-  <div class="profile">
-    <img src="GeneKaliman.jpg" alt="Фото Геннадия Калимана" />
-    <div class="bio-text">
-      Геннадий Калиман (Gene Kaliman)
-      родился в 1951 году в городе Орехово-Зуево. Этот город, расположенный на
-      берегу реки Клязьма в 90 км восточнее
-      Москвы, в основном известен своими
-      славными революционными традициями.
-      Он вошел в историю России как место, где в
-      1885 году на фабриках известного мецената
-      Тимофея Саввича Морозова произошло
-      первое крупное организованное
-      выступление рабочего класса.
-       В 1974 году Геннадий успешно окончил
-      Московский институт электронного
-      машиностроения и в течение последующих
-      восемнадцати лет работал в научно-исследовательских институтах, изучающих методы совершенствования
-      планирования и директивного ценообразования в Советском Союзе.
-      Результатом этой работы была диссертация по математическим методам
-      в экономике и полное разочарование в возможности их использования в
-      условиях развитого социализма.
-       В 1991 году, за три недели до Августовского путча в Москве,
-      Геннадий с семьей прибыл в Соединенные Штаты Америки и поселился
-      в городе Сан-Диего. После тридцати лет упорного труда по созданию
-      программного обеспечения в различных областях хозяйственной
-      деятельности в стране развитого капитализма Геннадий ушел на
-      заслуженный отдых. И наконец ему представилась возможность
-      исследовать то, чем он интересовался всю свою сознательную жизнь –
-      историей развития человеческого общества. Результатом исследования
-      и является эта книга.
+    <div class="bio">
+      <p>
+        Геннадий Калиман (Gene Kaliman) родился в 1951 году в городе Орехово-Зуево.
+        Этот город, расположенный на берегу реки Клязьма в 90 км восточнее Москвы,
+        в основном известен своими славными революционными традициями. Он вошел в
+        историю России как место, где в 1885 году на фабриках известного мецената
+        Тимофея Саввича Морозова произошло первое крупное организованное выступление рабочего класса.
+      </p>
+      <p>
+        В 1974 году Геннадий успешно окончил Московский институт электронного машиностроения и
+        в течение последующих восемнадцати лет работал в научно-исследовательских институтах,
+        изучающих методы совершенствования планирования и директивного ценообразования в Советском Союзе.
+        Результатом этой работы была диссертация по математическим методам в экономике и полное разочарование
+        в возможности их использования в условиях развитого социализма.
+      </p>
+      <p>
+        В 1991 году, за три недели до Августовского путча в Москве, Геннадий с семьей прибыл
+        в Соединенные Штаты Америки и поселился в городе Сан-Диего. После тридцати лет упорного труда
+        по созданию программного обеспечения в различных областях хозяйственной деятельности в стране
+        развитого капитализма Геннадий ушел на заслуженный отдых. И наконец ему представилась возможность
+        исследовать то, чем он интересовался всю свою сознательную жизнь – историей развития человеческого общества.
+        Результатом исследования и является эта книга.
+      </p>
+
+      <a class="button" href="History and Climate.pdf" download>📕 Скачать книгу (PDF)</a>
     </div>
   </div>
-
-  <a class="button" href="MyBook_4_english_new_6.pdf" download>📕 Скачать книгу (PDF)</a>
-
-  <hr />
-
-  <h2>Комментарии читателей</h2>
-
-  <div id="disqus_thread"></div>
-  <script>
-    var disqus_config = function () {
-      this.page.url = window.location.href;
-      this.page.identifier = window.location.pathname;
-    };
-
-    (function() {
-      var d = document, s = d.createElement('script');
-      s.src = 'https://YOUR_DISQUS_SHORTNAME.disqus.com/embed.js'; // Замените на свой shortname
-      s.setAttribute('data-timestamp', +new Date());
-      (d.head || d.body).appendChild(s);
-    })();
-  </script>
-  <noscript>Пожалуйста, включите JavaScript для просмотра комментариев.</noscript>
-
 </body>
 </html>
