--- a/index.html
+++ b/index.html
@@ -6,30 +6,38 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      max-width: 1100px; /* Wider text area */
-      margin: 10px auto; /* Smaller outer margin */
-      padding: 10px;     /* Smaller inner padding */
+      max-width: 1100px;
+      margin: 10px auto;
+      padding: 10px;
       line-height: 1.5;
+      background-color: #f9f9f9;
+      color: #333;
     }
 
     h1 {
       text-align: center;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
+      font-size: 26px;
     }
 
     .container {
       display: flex;
-      flex-wrap: wrap;
       gap: 15px;
       align-items: flex-start;
+      background: #fff;
+      padding: 15px;
+      border-radius: 12px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      margin-bottom: 20px;
     }
 
     .photo {
-      flex: 0 0 220px;
+      flex: 0 0 320px;
     }
 
     .photo img {
       width: 100%;
+      object-fit: cover;
       border-radius: 10px;
     }
 
@@ -37,34 +45,67 @@
       flex: 1;
     }
 
-    .button {
-      display: inline-block;
-      background-color: #007bff;
-      color: white;
-      padding: 10px 16px;
-      text-decoration: none;
-      border-radius: 5px;
-      margin-top: 20px;
+    .bio p {
+      margin-bottom: 0.8em;
+      font-size: 15.5px;
+    }
+
+    .book-section {
+      background: #fff;
+      padding: 15px;
+      border-radius: 12px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+
+    .book-title {
+      font-size: 17px;
+      font-weight: bold;
+      margin-bottom: 10px;
+      color: #222;
+      text-align: center;
+    }
+
+    .book-layout {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 25px;
+      align-items: flex-start;
+      justify-content: center;
+    }
+
+    .book-cover {
+      width: 170px;
+      border-radius: 8px;
+    }
+
+    .links-vertical {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
       font-size: 15px;
     }
 
-    .button:hover {
-      background-color: #0056b3;
+    .links-vertical a {
+      margin: 8px 0;
+      text-decoration: none;
+      color: #003366;
+      font-weight: bold;
     }
 
-    .comments {
-      margin-top: 40px;
+    .links-vertical a:hover {
+      text-decoration: underline;
+      color: #0056b3;
     }
   </style>
 </head>
 <body>
+
   <h1>Геннадий Калиман</h1>
 
   <div class="container">
     <div class="photo">
       <img src="GeneKaliman.jpg" alt="Геннадий Калиман">
     </div>
-
     <div class="bio">
       <p>
         Геннадий Калиман (Gene Kaliman) родился в 1951 году в городе Орехово-Зуево.
@@ -88,9 +129,25 @@
         исследовать то, чем он интересовался всю свою сознательную жизнь – историей развития человеческого общества.
         Результатом исследования и является эта книга.
       </p>
-
-      <a class="button" href="History and Climate.pdf" download>📕 Скачать книгу (PDF)</a>
     </div>
   </div>
+
+  <div class="book-section">
+    <div class="book-title">От каменного века до века железа</div>
+    <div class="book-layout">
+      <div>
+        <a href="books/HistoryClimate/read.html">
+          <img src="books/HistoryClimate/History_Climate_Cover_page.jpg" alt="Обложка книги" class="book-cover" />
+        </a>
+      </div>
+      <div class="links-vertical">
+        <a href="books/HistoryClimate/read.html">📖 Читать онлайн</a>
+        <a href="books/HistoryClimate/History_Climate.pdf" download>⬇️ Скачать книгу (PDF)</a>
+        <a href="books/HistoryClimate/read.html#comments">💬 Оставить комментарий</a>
+        <a href="books/HistoryClimate/Readme.html">ℹ️ Описание книги</a>
+      </div>
+    </div>
+  </div>
+
 </body>
 </html>
