--- a/books/HistoryClimate/Readme.html
+++ b/books/HistoryClimate/Readme.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 
-  <h1>От каменного века до железного</h1>
+  <h1>От каменного века до века железа</h1>
 
   <p>
     В книге дается общий обзор истории Ближнего Востока с девятого по первое тысячелетия до н. э. и того влияния, которое длительные периоды потепления и похолодания оказывали на регион.
