--- a/books/HistoryClimate/read.html
+++ b/books/HistoryClimate/read.html
@@ -61,7 +61,7 @@
     pdfjsLib.GlobalWorkerOptions.workerSrc =
       "https://cdn.jsdelivr.net/npm/pdfjs-dist@4.4.168/build/pdf.worker.min.js";
 
-    const url = "History_Climate.pdf"; // same folder as this file
+    const url = "/kaliman-books/books/HistoryClimate/History_Climate.pdf"; // same folder as this file
     const canvas = document.getElementById("pdfCanvas");
     const ctx = canvas.getContext("2d");
 
