--- a/books/HistoryClimate/read.html
+++ b/books/HistoryClimate/read.html
@@ -16,7 +16,7 @@
     }
     .toolbar button:hover { background:#f1f5f9; cursor:pointer; }
     .page-info { margin-left:6px; }
-    .frame-wrap { height: calc(100vh - 64px); }
+    .frame-wrap { height: calc(100vh - 54px); }
     iframe { width:100%; height:100%; border:0; background:#fff; }
   </style>
 </head>
@@ -33,37 +33,44 @@
   </div>
 
   <div class="frame-wrap">
-    <iframe id="viewer"
-      src="/kaliman-books/books/HistoryClimate/History_Climate.pdf#page=1&zoom=page-width"
-      title="PDF"></iframe>
+    <iframe id="viewer" title="PDF"></iframe>
   </div>
 
   <script>
-    const pdfPath = "/kaliman-books/books/HistoryClimate/History_Climate.pdf";
+    // Absolute URL to your PDF on GitHub Pages:
+    const fileURL = encodeURIComponent("https://genekaliman.github.io/kaliman-books/books/HistoryClimate/History_Climate.pdf");
+
+    // PDF.js viewer hosted on a CDN:
+    const baseViewer = "https://cdn.jsdelivr.net/npm/pdfjs-dist@4.4.168/web/viewer.html";
+
+    let page = 1;
+    let zoom = "page-width"; // or "page-fit"
+
     const iframe = document.getElementById("viewer");
     const pageInput = document.getElementById("pageInput");
     const prevBtn = document.getElementById("prevBtn");
     const nextBtn = document.getElementById("nextBtn");
     const fitWidthBtn = document.getElementById("fitWidth");
-    const fitPageBtn = document.getElementById("fitPage");
+    const fitPageBtn  = document.getElementById("fitPage");
 
-    let page = 1;
-    let zoom = "page-width"; // or "page-fit"
-
+    function srcFor(p, z) {
+      // add cache-buster so the viewer actually jumps pages
+      const bust = Date.now();
+      return `${baseViewer}?file=${fileURL}#page=${p}&zoom=${z}&t=${bust}`;
+    }
     function update() {
-      iframe.src = `${pdfPath}#page=${page}&zoom=${zoom}`;
+      iframe.src = srcFor(page, zoom);
       history.replaceState(null, "", `#p=${page}`);
       pageInput.value = page;
     }
-
     function changePage(delta) {
       page = Math.max(1, page + delta);
       update();
     }
 
-    // init from hash if present
-    const hashPage = parseInt(location.hash.replace("#p=", ""), 10);
-    if (!isNaN(hashPage) && hashPage > 0) page = hashPage;
+    // init from hash
+    const hp = parseInt(location.hash.replace("#p=", ""), 10);
+    if (!isNaN(hp) && hp > 0) page = hp;
     update();
 
     // controls
@@ -73,7 +80,6 @@
       const n = parseInt(pageInput.value, 10);
       if (!isNaN(n) && n > 0) { page = n; update(); } else pageInput.value = page;
     });
-
     fitWidthBtn.addEventListener("click", () => { zoom = "page-width"; update(); });
     fitPageBtn.addEventListener("click",  () => { zoom = "page-fit";   update(); });
 
@@ -81,8 +87,8 @@
     document.addEventListener("keydown", (e) => {
       if (e.key === "ArrowLeft" || e.key === "PageUp")   changePage(-1);
       if (e.key === "ArrowRight"|| e.key === "PageDown") changePage(1);
-      if (e.key === "+") { zoom = "150"; update(); } // quick zoom in
-      if (e.key === "-") { zoom = "100"; update(); } // quick zoom out
+      if (e.key === "+") { zoom = "150"; update(); }
+      if (e.key === "-") { zoom = "100"; update(); }
     });
   </script>
 </body>
