--- a/books/HistoryClimate/read.html
+++ b/books/HistoryClimate/read.html
@@ -6,30 +6,21 @@
   <title>От каменного века до железного — Читать онлайн</title>
   <style>
     body { margin:0; font-family: Arial, sans-serif; background:#f4f5f7; color:#222; }
-    .toolbar {
-      position: sticky; top:0; z-index:5;
-      display:flex; flex-wrap:wrap; gap:8px; align-items:center;
-      padding:10px; background:#fff; border-bottom:1px solid #e5e7eb;
-    }
-    .toolbar button, .toolbar input {
-      font-size:14px; padding:6px 10px; border-radius:6px; border:1px solid #cbd5e1; background:#fff;
-    }
+    .toolbar { position: sticky; top:0; z-index:5; display:flex; gap:8px; align-items:center; padding:10px; background:#fff; border-bottom:1px solid #e5e7eb; }
+    .toolbar button, .toolbar input { font-size:14px; padding:6px 10px; border-radius:6px; border:1px solid #cbd5e1; background:#fff; }
     .toolbar button:hover { background:#f1f5f9; cursor:pointer; }
-    .page-info { margin-left:6px; }
     .frame-wrap { height: calc(100vh - 54px); }
     iframe { width:100%; height:100%; border:0; background:#fff; }
   </style>
 </head>
 <body>
   <div class="toolbar">
-    <button id="prevBtn">← Предыдущая</button>
-    <button id="nextBtn">Следующая →</button>
-    <span class="page-info">
-      Стр. <input id="pageInput" type="number" min="1" value="1" style="width:70px" />
-    </span>
+    <button id="prev">← Предыдущая</button>
+    <button id="next">Следующая →</button>
+    <span>Стр. <input id="page" type="number" min="1" value="1" style="width:70px" /></span>
     <span style="flex:1"></span>
-    <button id="fitWidth">По ширине</button>
-    <button id="fitPage">Страница</button>
+    <button id="w">По ширине</button>
+    <button id="f">Страница</button>
   </div>
 
   <div class="frame-wrap">
@@ -37,59 +28,38 @@
   </div>
 
   <script>
-    // Absolute URL to your PDF on GitHub Pages:
+    // absolute URL to your PDF
     const fileURL = encodeURIComponent("https://genekaliman.github.io/kaliman-books/books/HistoryClimate/History_Climate.pdf");
+    // use unpkg viewer (works): 
+    const baseViewer = "https://unpkg.com/pdfjs-dist@4.4.168/web/viewer.html";
 
-    // PDF.js viewer hosted on a CDN:
-    const baseViewer = "https://cdn.jsdelivr.net/npm/pdfjs-dist@4.4.168/web/viewer.html";
+    let page = 1, zoom = "page-width";
+    const frame = document.getElementById("viewer");
+    const inp = document.getElementById("page");
 
-    let page = 1;
-    let zoom = "page-width"; // or "page-fit"
-
-    const iframe = document.getElementById("viewer");
-    const pageInput = document.getElementById("pageInput");
-    const prevBtn = document.getElementById("prevBtn");
-    const nextBtn = document.getElementById("nextBtn");
-    const fitWidthBtn = document.getElementById("fitWidth");
-    const fitPageBtn  = document.getElementById("fitPage");
-
-    function srcFor(p, z) {
-      // add cache-buster so the viewer actually jumps pages
-      const bust = Date.now();
-      return `${baseViewer}?file=${fileURL}#page=${p}&zoom=${z}&t=${bust}`;
+    function srcFor(p,z){
+      return `${baseViewer}?file=${fileURL}#page=${p}&zoom=${z}&_=${Date.now()}`;
     }
-    function update() {
-      iframe.src = srcFor(page, zoom);
+    function update(){
+      frame.src = srcFor(page, zoom);
       history.replaceState(null, "", `#p=${page}`);
-      pageInput.value = page;
+      inp.value = page;
     }
-    function changePage(delta) {
-      page = Math.max(1, page + delta);
-      update();
-    }
-
-    // init from hash
-    const hp = parseInt(location.hash.replace("#p=", ""), 10);
-    if (!isNaN(hp) && hp > 0) page = hp;
+    const hp = parseInt(location.hash.replace("#p=",""),10);
+    if(!isNaN(hp) && hp>0) page = hp;
     update();
 
-    // controls
-    prevBtn.addEventListener("click", () => changePage(-1));
-    nextBtn.addEventListener("click", () => changePage(1));
-    pageInput.addEventListener("change", () => {
-      const n = parseInt(pageInput.value, 10);
-      if (!isNaN(n) && n > 0) { page = n; update(); } else pageInput.value = page;
-    });
-    fitWidthBtn.addEventListener("click", () => { zoom = "page-width"; update(); });
-    fitPageBtn.addEventListener("click",  () => { zoom = "page-fit";   update(); });
+    document.getElementById("prev").onclick = ()=>{ page=Math.max(1,page-1); update(); };
+    document.getElementById("next").onclick = ()=>{ page=page+1; update(); };
+    inp.onchange = ()=>{ const n=parseInt(inp.value,10); if(!isNaN(n)&&n>0){page=n; update();} else inp.value=page; };
+    document.getElementById("w").onclick = ()=>{ zoom="page-width"; update(); };
+    document.getElementById("f").onclick = ()=>{ zoom="page-fit";   update(); };
 
-    // keyboard
-    document.addEventListener("keydown", (e) => {
-      if (e.key === "ArrowLeft" || e.key === "PageUp")   changePage(-1);
-      if (e.key === "ArrowRight"|| e.key === "PageDown") changePage(1);
-      if (e.key === "+") { zoom = "150"; update(); }
-      if (e.key === "-") { zoom = "100"; update(); }
+    document.addEventListener("keydown", e=>{
+      if(e.key==="ArrowLeft"||e.key==="PageUp")   { page=Math.max(1,page-1); update(); }
+      if(e.key==="ArrowRight"||e.key==="PageDown"){ page=page+1; update(); }
     });
   </script>
 </body>
 </html>
+
