--- a/books/HistoryClimate/read.html
+++ b/books/HistoryClimate/read.html
@@ -123,6 +123,7 @@
       // a human-readable title and its starting page number (1-based). Feel free to
       // adjust titles or pages if needed.
       const tocEntries = [
+        { title: 'Введение', page: 3 },
         { title: 'Глава 1. Климат и история', page: 5 },
         { title: 'Глава 2. Эти таинственные шумеры', page: 37 },
         { title: 'Глава 3. Убейдцы и шумеры', page: 71 },
